--- a/public/css/components/tarjeta.css
+++ b/public/css/components/tarjeta.css
@@ -5,6 +5,7 @@
   --color-secundario-2: #757d6b;
   --sombra-oscura: rgba(76, 59, 46, 1);
   --color-textos-tarjeta: #f3eadb;
+  --color-textos-tarjeta-oscuro: #4c3b2e;
 }
 
 .tarjeta-fidelidad {
