--- a/public/css/components/inputs.css
+++ b/public/css/components/inputs.css
@@ -15,26 +15,32 @@ input {
 
 /* Día y mes como input visual */
 .input-like {
-  padding: 10px;
+  padding: 14px;
   font-size: 16px;
-  width: 43%;
+  width: 20%;
   margin: 10px 0;
   border: 2px solid white;
   border-radius: 8px;
   background-color: white;
-  color: black;
+  color: #757575;
   font-weight: bold;
   text-align: center;
 }
 
 .input-like option[disabled],
-.input-like option:first-child {
-  color: #999;
+.input-like option:valid {
+  color: #000000;
   font-weight: normal;
 }
 
 @media (max-width: 480px) {
-  input, .input-like {
-    font-size: 15px;
+  .input-like {
+    font-size: 16px;
+    padding: 14px;
+    width: 20%; /* Esto hace que ocupen todo el ancho en mobile */
   }
+}
+
+#dni.pasaporte {
+  text-transform: uppercase;
 }
