--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,7 @@ body {
   position: relative;
 }
 
-/* Card principal */
+/* Card principal 
 .menu-style {
   width: 90%;
   max-width: 480px;
@@ -23,7 +23,7 @@ body {
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
   text-align: center;
   box-sizing: border-box;
-}
+}*/
 
 /* Logo (caballito) */
 .logo, .galope {
