--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -197,3 +197,67 @@ body {
   margin: 0;
   padding: 0;
 }
+
+table {
+  width: 100%;
+  border-collapse: separate;
+  border-spacing: 0 12px;
+  table-layout: auto;
+}
+
+th, td {
+  word-break: break-word;
+}
+
+th:nth-child(1), td:nth-child(1) {
+  width: 40%;
+}
+
+th:nth-child(2), td:nth-child(2),
+th:nth-child(3), td:nth-child(3) {
+  width: 20%;
+}
+
+th:nth-child(4), td:nth-child(4) {
+  width: 20%;
+}
+
+th, td {
+  padding: 10px 12px;
+  background-color: #fff;
+  border-radius: 10px;
+  font-size: 1em;
+  word-wrap: break-word;
+}
+
+thead th {
+  background-color: #e8d8cc;
+  color: #1d1d1d;
+  border-radius: 10px;
+}
+
+tbody tr {
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+}
+
+tbody tr:hover {
+  background-color: #f0ebe5;
+}
+
+td:last-child {
+  display: block;
+  padding-top: 12px;
+  text-align: center;
+}
+
+td:last-child button,
+td:last-child .btn-editar,
+td:last-child .btn-eliminar {
+  margin: 0 6px;
+}
+
+td {
+  vertical-align: top;
+}
