--- a/public/css/base.css
+++ b/public/css/base.css
@@ -14,6 +14,7 @@ body {
 
 h1 {
   font-size: 20px;
+  font-family: 'Syncopate', serif;
   margin-bottom: 20px;
   color: var(--color-claro);
 }
@@ -38,6 +39,13 @@ h4 {
   font-size: 20px;
   margin-bottom: 20px;
   color: var(--color-claro);
+}
+
+h5 {
+  font-size: 20px;
+  font-family: 'Syncopate', serif;
+  margin-bottom: 20px;
+  color: var(--color-oscuro)
 }
 
 ul {
