--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,6 +63,7 @@ input {
 }
 
 /* Botones */
+/*
 button, .btn-primary {
   padding: 10px 20px;
   font-family: 'Syncopate', serif;
@@ -100,7 +101,7 @@ button, .btn-primary {
   font-weight: bold;
   font-size: 12.5px;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-}
+}*/
 
 /* Mensajes */
 .mensaje {
@@ -131,6 +132,7 @@ button, .btn-primary {
   text-align: center;
 }
 
+/*
 .logout {
   margin-top: 20px;
 }
@@ -143,7 +145,7 @@ button, .btn-primary {
   font-weight: bold;
   margin: 8px 0;
   cursor: pointer;
-}
+}*/
 
 /* Boton día y mes de cumpleaños */
 .input-like {
@@ -166,4 +168,17 @@ button, .btn-primary {
 .input-like option:first-child {
   color: #999;
   font-weight: normal;
+}
+
+.input-rol {
+  padding: 10px;
+  font-size: 16px;
+  width: 100%;
+  margin: 10px 0;
+  border: 2px solid white;
+  border-radius: 8px;
+  background-color: white;
+  color: rgb(117 117 117);
+  font-weight: bold;
+  text-align: center;
 }
